--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,11 @@
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@sequelize/postgres": "^7.0.0-alpha.43",
+    "@types/express": "^5.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1"
   }
 }
